--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 envlist =
-    py{2.7,3.4,3.5,3.6}-django1.11-{sqlite3,postgresql,mysql}-{redis,memcached,pylibmc,locmem,filebased},
-    py{3.4,3.5,3.6}-django2.0-{sqlite3,postgresql,mysql}-{redis,memcached,pylibmc,locmem,filebased},
+    py{2.7,3.4,3.5,3.6,3.7}-django1.11-{sqlite3,postgresql,mysql}-{redis,memcached,pylibmc,locmem,filebased},
+    py{3.4,3.5,3.6,3.7}-django2.0-{sqlite3,postgresql,mysql}-{redis,memcached,pylibmc,locmem,filebased},
     py{3.5,3.6,3.7}-django2.1-{sqlite3,postgresql,mysql}-{redis,memcached,pylibmc,locmem,filebased},
     py{3.5,3.6,3.7,3.8}-django2.2-{sqlite3,postgresql,mysql}-{redis,memcached,pylibmc,locmem,filebased},
     py{3.6,3.7,3.8}-django3.0-{sqlite3,postgresql,mysql}-{redis,memcached,pylibmc,locmem,filebased},
@@ -41,3 +41,11 @@ setenv =
     pylibmc:    CACHE_BACKEND=pylibmc
 commands =
     coverage run -a --source=cachalot ./runtests.py
+
+[travis:env]
+DJANGO =
+  1.11: django1.11
+  2.0: django2.0
+  2.1: django2.1
+  2.2: django2.2
+  3.0: django3.0
