Correctly run Travis test by updating tox.ini * Originally using tox syntax but changed testenv to travis so that travis env and travis dependencies and stuff are used

--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,23 @@ matrix:
     - python: 2.7
       env: DJANGO=3.0
 
+    - python: 3.4
+      env: DJANGO=2.1
+    - python: 3.4
+      env: DJANGO=2.2
+    - python: 3.4
+      env: DJANGO=3.0
+
+    - python: 3.5
+      env: DJANGO=3.0
+
+    - python: 3.8
+      env: DJANGO=1.11
+    - python: 3.8
+      env: DJANGO=2.0
+    - python: 3.8
+      env: DJANGO=2.1
+
 sudo: false
 
 cache: pip
