--- a/tox.ini
+++ b/tox.ini
@@ -1,19 +1,19 @@
 [tox]
 envlist =
-    py{2.7,3.4,3.5,3.6,3.7}-django1.11-{sqlite3,postgresql,mysql}-{redis,memcached,pylibmc,locmem,filebased},
-    py{3.4,3.5,3.6,3.7}-django2.0-{sqlite3,postgresql,mysql}-{redis,memcached,pylibmc,locmem,filebased},
-    py{3.5,3.6,3.7}-django2.1-{sqlite3,postgresql,mysql}-{redis,memcached,pylibmc,locmem,filebased},
-    py{3.5,3.6,3.7,3.8}-django2.2-{sqlite3,postgresql,mysql}-{redis,memcached,pylibmc,locmem,filebased},
-    py{3.6,3.7,3.8}-django3.0-{sqlite3,postgresql,mysql}-{redis,memcached,pylibmc,locmem,filebased},
+    py{27,34,35,36,37}-django1.11-{sqlite3,postgresql,mysql}-{redis,memcached,pylibmc,locmem,filebased},
+    py{34,35,36,37}-django2.0-{sqlite3,postgresql,mysql}-{redis,memcached,pylibmc,locmem,filebased},
+    py{35,36,37}-django2.1-{sqlite3,postgresql,mysql}-{redis,memcached,pylibmc,locmem,filebased},
+    py{35,36,37,38}-django2.2-{sqlite3,postgresql,mysql}-{redis,memcached,pylibmc,locmem,filebased},
+    py{36,37,38}-django3.0-{sqlite3,postgresql,mysql}-{redis,memcached,pylibmc,locmem,filebased},
 
-[testenv]
+[travis]
 basepython =
-    py2.7: python2.7
-    py3.4: python3.4
-    py3.5: python3.5
-    py3.6: python3.6
-    py3.7: python3.7
-    py3.8: python3.8
+    py27: python2.7
+    py34: python3.4
+    py35: python3.5
+    py36: python3.6
+    py37: python3.7
+    py38: python3.8
 deps =
     django1.11: Django>=1.11,<1.12
     django2.0: Django>=2.0,<2.1
