Tox tests should start running command

--- a/tox.ini
+++ b/tox.ini
@@ -39,6 +39,8 @@ setenv =
     redis:      CACHE_BACKEND=redis
     memcached:  CACHE_BACKEND=memcached
     pylibmc:    CACHE_BACKEND=pylibmc
+
+[testenv]
 commands =
     coverage run -a --source=cachalot ./runtests.py
 
