Added missing six in test * Also added six package to Tox for Django 3.0 coverage. * The missing six package caused several problems in several tests due to using an incorrect DB

--- a/tox.ini
+++ b/tox.ini
@@ -30,6 +30,7 @@ deps =
     django-debug-toolbar
     beautifulsoup4
     coverage
+    six
 setenv =
     sqlite3:    DB_ENGINE=sqlite3
     postgresql: DB_ENGINE=postgresql
