--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,10 @@ matrix:
       env: DJANGO=3.0
 
     - python: 3.4
+      env: DJANGO=1.11
+    - python: 3.4
+      env: DJANGO=2.0
+    - python: 3.4
       env: DJANGO=2.1
     - python: 3.4
       env: DJANGO=2.2
