--- a/.travis.yml
+++ b/.travis.yml
@@ -32,10 +32,6 @@ matrix:
       env: DJANGO=3.0
 
     - python: 3.4
-      env: DJANGO=1.11
-    - python: 3.4
-      env: DJANGO=2.0
-    - python: 3.4
       env: DJANGO=2.1
     - python: 3.4
       env: DJANGO=2.2
@@ -51,6 +47,12 @@ matrix:
       env: DJANGO=2.0
     - python: 3.8
       env: DJANGO=2.1
+
+  allow_failures:  # TODO Remove when Python 3.4 fixed
+    - python: 3.4
+      env: DJANGO=1.11
+    - python: 3.4
+      env: DJANGO=2.0
 
 sudo: false
 
