Make include matrix and Adjust Django and is_sqlite errors (594 CI) * CI testing the Tox errors: https://travis-ci.org/noripyt/django-cachalot?utm_medium=notification&utm_source=github_status * Adjustment 3

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,32 +21,50 @@ env:
   - DJANGO="3.0"
 
 matrix:
-  exclude:
+  include:
     - python: 2.7
-      env: DJANGO=2.0
-    - python: 2.7
-      env: DJANGO=2.1
-    - python: 2.7
-      env: DJANGO=2.2
-    - python: 2.7
-      env: DJANGO=3.0
+      env: DJANGO=1.11
 
     - python: 3.4
-      env: DJANGO=2.1
+      env: DJANGO=1.11
     - python: 3.4
-      env: DJANGO=2.2
-    - python: 3.4
-      env: DJANGO=3.0
+      env: DJANGO=2.0
 
     - python: 3.5
+      env: DJANGO=1.11
+    - python: 3.5
+      env: DJANGO=2.0
+    - python: 3.5
+      env: DJANGO=2.1
+    - python: 3.5
+      env: DJANGO=2.2
+
+    - python: 3.6
+      env: DJANGO=1.11
+    - python: 3.6
+      env: DJANGO=2.0
+    - python: 3.6
+      env: DJANGO=2.1
+    - python: 3.6
+      env: DJANGO=2.2
+    - python: 3.6
+      env: DJANGO=3.0
+
+    - python: 3.7
+      env: DJANGO=1.11
+    - python: 3.7
+      env: DJANGO=2.0
+    - python: 3.7
+      env: DJANGO=2.1
+    - python: 3.7
+      env: DJANGO=2.2
+    - python: 3.7
       env: DJANGO=3.0
 
     - python: 3.8
-      env: DJANGO=1.11
+      env: DJANGO=2.2
     - python: 3.8
-      env: DJANGO=2.0
-    - python: 3.8
-      env: DJANGO=2.1
+      env: DJANGO=3.0
 
   allow_failures:  # TODO Remove when Python 3.4 fixed
     - python: 3.4
