--- a/.travis.yml
+++ b/.travis.yml
@@ -25,10 +25,10 @@ matrix:
     - python: 2.7
       env: DJANGO=1.11
 
-    - python: 3.4
-      env: DJANGO=1.11
-    - python: 3.4
-      env: DJANGO=2.0
+#    - python: 3.4  Uncomment when py3.4 fixed
+#      env: DJANGO=1.11
+#    - python: 3.4
+#      env: DJANGO=2.0
 
     - python: 3.5
       env: DJANGO=1.11
