--- a/tox.ini
+++ b/tox.ini
@@ -1,19 +1,24 @@
 [tox]
 envlist =
-    py{2.7,3.4,3.5,3.6}-django1.11-{sqlite3,postgresql,mysql}-{redis,memcached,pylibmc,locmem,filebased},
-    py{3.4,3.5,3.6}-django2.0-{sqlite3,postgresql,mysql}-{redis,memcached,pylibmc,locmem,filebased},
-    py{3.5,3.6,3.7}-django2.1-{sqlite3,postgresql,mysql}-{redis,memcached,pylibmc,locmem,filebased},
+    py{27,35,36,37}-django1.11-{sqlite3,postgresql,mysql}-{redis,memcached,pylibmc,locmem,filebased},
+    py{35,36,37}-django2.0-{sqlite3,postgresql,mysql}-{redis,memcached,pylibmc,locmem,filebased},
+    py{35,36,37}-django2.1-{sqlite3,postgresql,mysql}-{redis,memcached,pylibmc,locmem,filebased},
+    py{35,36,37,38}-django2.2-{sqlite3,postgresql,mysql}-{redis,memcached,pylibmc,locmem,filebased},
+    py{36,37,38}-django3.0-{sqlite3,postgresql,mysql}-{redis,memcached,pylibmc,locmem,filebased},
 
 [testenv]
 basepython =
-    py2.7: python2.7
-    py3.4: python3.4
-    py3.5: python3.5
-    py3.6: python3.6
+    py27: python2.7
+    py35: python3.5
+    py36: python3.6
+    py37: python3.7
+    py38: python3.8
 deps =
     django1.11: Django>=1.11,<1.12
     django2.0: Django>=2.0,<2.1
-    django2.1: Django>=2.0,<2.2
+    django2.1: Django>=2.1,<2.2
+    django2.2: Django>=2.2,<2.3
+    django3.0: Django>=3.0,<3.1
     psycopg2-binary
     mysqlclient
     django-redis
@@ -24,6 +29,7 @@ deps =
     django-debug-toolbar
     beautifulsoup4
     coverage
+    six
 setenv =
     sqlite3:    DB_ENGINE=sqlite3
     postgresql: DB_ENGINE=postgresql
@@ -35,3 +41,11 @@ setenv =
     pylibmc:    CACHE_BACKEND=pylibmc
 commands =
     coverage run -a --source=cachalot ./runtests.py
+
+[travis:env]
+DJANGO =
+  1.11: django1.11
+  2.0: django2.0
+  2.1: django2.1
+  2.2: django2.2
+  3.0: django3.0
