Drop Python 2.7 and Dj 1.11

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,18 +2,16 @@ language: python
 
 services:
   - memcached
-  - redis-server
+  - redis
   - mysql
   - postgresql
 
 python:
-  - "2.7"
   - "3.5"
   - "3.6"
   - "3.7"
   - "3.8"
 env:
-  - DJANGO="1.11"
   - DJANGO="2.0"
   - DJANGO="2.1"
   - DJANGO="2.2"
@@ -21,26 +19,13 @@ env:
 
 matrix:
   exclude:
-    - python: 2.7
-      env: DJANGO=2.0
-    - python: 2.7
-      env: DJANGO=2.1
-    - python: 2.7
-      env: DJANGO=2.2
-    - python: 2.7
-      env: DJANGO=3.0
-
     - python: 3.5
       env: DJANGO=3.0
 
     - python: 3.8
-      env: DJANGO=1.11
-    - python: 3.8
       env: DJANGO=2.0
     - python: 3.8
       env: DJANGO=2.1
-
-sudo: false
 
 cache: pip
 
