Use GitHub actions & remove Travis

--- a/tox.ini
+++ b/tox.ini
@@ -41,7 +41,7 @@ setenv =
 commands =
     coverage run -a --source=cachalot ./runtests.py
 
-[travis:env]
+[gh-actions:env]
 DJANGO =
   2.0: django2.0
   2.1: django2.1
