--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,7 @@ jobs:
 
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         python-version: [3.5, 3.6, 3.7, 3.8, 3.9]
         django-version: [2.0, 2.1, 2.2, 3.0, 3.1]
@@ -70,3 +71,5 @@ jobs:
     - name: Coverage (Coveralls)
       if: ${{ success() }}
       run: coveralls
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
