--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,6 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -40,7 +39,7 @@ jobs:
           - 5432:5432
         env:
           POSTGRES_USER: cachalot
-          POSTGRES_PASSWORD: cachalot
+          POSTGRES_PASSWORD: password
           POSTGRES_DB: cachalot
       mysql:
         image: mysql
@@ -67,6 +66,7 @@ jobs:
     - name: Tox Test
       run: tox
       env:
+        POSTGRES_PASSWORD: "password"
         DJANGO: ${{ matrix.django-version }}
     - name: Coverage (Coveralls)
       if: ${{ success() }}
