Use setenv instead

--- a/tox.ini
+++ b/tox.ini
@@ -48,4 +48,5 @@ DJANGO =
   2.2: django2.2
   3.0: django3.0
   3.1: django3.1
-POSTGRES_PASSWORD = password
+setenv =
+  POSTGRES_PASSWORD: password
