--- a/tox.ini
+++ b/tox.ini
@@ -43,8 +43,10 @@ commands =
 
 [gh-actions:env]
 DJANGO =
-  2.0: django2.0
-  2.1: django2.1
-  2.2: django2.2
-  3.0: django3.0
-  3.1: django3.1
+    2.0: django2.0
+    2.1: django2.1
+    2.2: django2.2
+    3.0: django3.0
+    3.1: django3.1
+setenv =
+    postgres_pw: POSTGRES_PASSWORD=password
