--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,6 +61,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
+        sudo apt-get install -y libmemcached-dev zlib1g-dev
         python -m pip install --upgrade pip
         pip install tox tox-gh-actions coveralls
     - name: Tox Test
