--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,6 +41,11 @@ jobs:
           POSTGRES_USER: cachalot
           POSTGRES_PASSWORD: password
           POSTGRES_DB: cachalot
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
       mysql:
         image: mysql
         env:
@@ -69,6 +74,7 @@ jobs:
       env:
         TOX_TESTENV_PASSENV: POSTGRES_PASSWORD
         POSTGRES_PASSWORD: password
+        PYTHON_VER: ${{ matrix.python-version }}
         DJANGO: ${{ matrix.django-version }}
     - name: Coverage (Coveralls)
       if: ${{ success() }}
