--- a/tox.ini
+++ b/tox.ini
@@ -42,6 +42,12 @@ commands =
     coverage run -a --source=cachalot ./runtests.py
 
 [gh-actions:env]
+PYTHON_VER =
+    3.5: py35
+    3.6: py36
+    3.7: py37
+    3.8: py38
+    3.9: py39
 DJANGO =
     2.0: django2.0
     2.1: django2.1
