--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,21 +12,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ['3.5', '3.6', '3.7', '3.8', '3.9']
-        django-version: ['2.0', '2.1', '2.2', '3.0', '3.1']
-        exclude:
-          - python-version: '3.5'
-            django-version: '3.0'
-          - python-version: '3.5'
-            django-version: '3.1'
-          - python-version: '3.8'
-            django-version: '2.0'
-          - python-version: '3.8'
-            django-version: '2.1'
-          - python-version: '3.9'
-            django-version: '2.0'
-          - python-version: '3.9'
-            django-version: '2.1'
+        python-version: ['3.6', '3.7', '3.8', '3.9']
+        django-version: ['2.2', '3.0', '3.1', '3.2']
 
     services:
       redis:
