--- a/tox.ini
+++ b/tox.ini
@@ -41,10 +41,16 @@ setenv =
 commands =
     coverage run -a --source=cachalot ./runtests.py
 
-[travis:env]
+[gh-actions:env]
+PYTHON_VER =
+    3.5: py35
+    3.6: py36
+    3.7: py37
+    3.8: py38
+    3.9: py39
 DJANGO =
-  2.0: django2.0
-  2.1: django2.1
-  2.2: django2.2
-  3.0: django3.0
-  3.1: django3.1
+    2.0: django2.0
+    2.1: django2.1
+    2.2: django2.2
+    3.0: django3.0
+    3.1: django3.1
