--- a/tox.ini
+++ b/tox.ini
@@ -1,28 +1,26 @@
 [tox]
 envlist =
-    py{35,36,37}-django2.0-{sqlite3,postgresql,mysql}-{redis,memcached,pylibmc,locmem,filebased},
-    py{35,36,37}-django2.1-{sqlite3,postgresql,mysql}-{redis,memcached,pylibmc,locmem,filebased},
-    py{35,36,37,38,39}-django2.2-{sqlite3,postgresql,mysql}-{redis,memcached,pylibmc,locmem,filebased},
+    py{36,37,38,39}-django2.2-{sqlite3,postgresql,mysql}-{redis,memcached,pylibmc,locmem,filebased},
     py{36,37,38,39}-django3.0-{sqlite3,postgresql,mysql}-{redis,memcached,pylibmc,locmem,filebased},
     py{36,37,38,39}-django3.1-{sqlite3,postgresql,mysql}-{redis,memcached,pylibmc,locmem,filebased},
+    py{36,37,38,39}-django3.2-{sqlite3,postgresql,mysql}-{redis,memcached,pylibmc,locmem,filebased},
 
 [testenv]
 basepython =
-    py35: python3.5
     py36: python3.6
     py37: python3.7
     py38: python3.8
     py39: python3.9
 deps =
-    django2.0: Django>=2.0,<2.1
-    django2.1: Django>=2.1,<2.2
     django2.2: Django>=2.2,<2.3
     django3.0: Django>=3.0,<3.1
     django3.1: Django>=3.1,<3.2
+    django3.2: Django>=3.2,<3.3
     psycopg2-binary
     mysqlclient
     django-redis
     python-memcached
+    pymemcache
     pylibmc
     pytz
     Jinja2
@@ -43,14 +41,12 @@ commands =
 
 [gh-actions:env]
 PYTHON_VER =
-    3.5: py35
     3.6: py36
     3.7: py37
     3.8: py38
     3.9: py39
 DJANGO =
-    2.0: django2.0
-    2.1: django2.1
     2.2: django2.2
     3.0: django3.0
     3.1: django3.1
+    3.2: django3.2
