--- a/tox.ini
+++ b/tox.ini
@@ -3,6 +3,7 @@ envlist =
     py{36,37,38,39}-django2.2-{sqlite3,postgresql,mysql}-{redis,memcached,pylibmc,locmem,filebased},
     py{36,37,38,39}-django3.1-{sqlite3,postgresql,mysql}-{redis,memcached,pylibmc,locmem,filebased},
     py{36,37,38,39}-django3.2-{sqlite3,postgresql,mysql}-{redis,memcached,pylibmc,locmem,filebased},
+    py{36,37,38,39}-djangomain-{sqlite3,postgresql,mysql}-{redis,memcached,pylibmc,locmem,filebased},
 
 [testenv]
 basepython =
@@ -14,6 +15,7 @@ deps =
     django2.2: Django>=2.2,<2.3
     django3.1: Django>=3.1,<3.2
     django3.2: Django>=3.2,<3.3
+    djangomain: https://github.com/django/django/archive/main.tar.gz
     psycopg2-binary
     mysqlclient
     django-redis
@@ -37,13 +39,16 @@ setenv =
 commands =
     coverage run -a --source=cachalot ./runtests.py
 
-[gh-actions:env]
-PYTHON_VER =
+[gh-actions]
+python =
     3.6: py36
     3.7: py37
     3.8: py38
     3.9: py39
+
+[gh-actions:env]
 DJANGO =
     2.2: django2.2
     3.1: django3.1
     3.2: django3.2
+    main: djangomain
