--- a/tox.ini
+++ b/tox.ini
@@ -16,7 +16,7 @@ deps =
     django3.1: Django>=3.1,<3.2
     django3.2: Django>=3.2,<3.3
     djangomain: https://github.com/django/django/archive/main.tar.gz
-    psycopg2-binary
+    psycopg2-binary>=2.8,<2.9
     mysqlclient
     django-redis
     python-memcached
