Add test settings to sdist. Closes #200.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,2 +1,2 @@
-include README.rst LICENSE CHANGELOG.rst requirements.txt
+include README.rst LICENSE CHANGELOG.rst requirements.txt tox.ini
 recursive-include cachalot *.json *.html
