--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,12 +12,12 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ['3.6', '3.7', '3.8', '3.9']
+        python-version: ['3.6', '3.7', '3.8', '3.9', '3.10']
         django-version: ['2.2', '3.1', '3.2']
 
     services:
       redis:
-        image: redis:6.0
+        image: redis:6
         ports:
           - 6379:6379
       postgres:
