Fix tox.ini and use exclude for ci.yml * runtests_urls.py had an issue from using pre-Django 2.2 import of urls * tox.ini forgot to remove 3.7 from Django 4.0 env

--- a/.github/workflows/main-ci.yml
+++ b/.github/workflows/main-ci.yml
@@ -15,7 +15,7 @@ jobs:
 
     services:
       redis:
-        image: redis:6.0
+        image: redis:6
         ports:
           - 6379:6379
       postgres:
@@ -64,7 +64,7 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt-get install -y libmemcached-dev zlib1g-dev
-        python -m pip install --upgrade pip
+        python -m pip install --upgrade pip wheel
         python -m pip install tox tox-gh-actions coveralls
     - name: Tox Test
       run: tox
