Add Django 4.0 support, drop Python 3.6 and Django 3.1 (#208)
* Fix tox.ini and use exclude for ci.yml
* runtests_urls.py had an issue from using pre-Django 2.2 import of urls
* tox.ini forgot to remove 3.7 from Django 4.0 env
* Use re_path
* Avoid system error in Django test
* Fix read/test_union.py
* Test assertion error for read/test_union
* Fix remaining read/test_intersection test
* Bump version

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,8 +12,13 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ['3.6', '3.7', '3.8', '3.9', '3.10']
-        django-version: ['2.2', '3.1', '3.2']
+        python-version: ['3.7', '3.8', '3.9', '3.10']
+        django-version: ['2.2', '3.2', '4.0']
+        exclude:
+          - python-version: '3.10'
+            django-version: '2.2'
+          - python-version: '3.7'
+            django-version: '4.0'
 
     services:
       redis:
@@ -66,7 +71,7 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt-get install -y libmemcached-dev zlib1g-dev
-        python -m pip install --upgrade pip
+        python -m pip install --upgrade pip wheel
         python -m pip install tox tox-gh-actions coveralls
     - name: Tox Test
       run: tox
