Add test settings to sdist (#203)
* Add test settings to sdist. Closes #200.

* Add remaining necessary test files

Co-authored-by: Andrew Chen Wang <60190294+Andrew-Chen-Wang@users.noreply.github.com>

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,3 @@
-include README.rst LICENSE CHANGELOG.rst requirements.txt
+include README.rst LICENSE CHANGELOG.rst requirements.txt tox.ini runtests.py runtests_urls.py settings.py
 recursive-include cachalot *.json *.html
 graft docs
