Add Django 4.1 support

--- a/tox.ini
+++ b/tox.ini
@@ -3,6 +3,7 @@ envlist =
     py{37,38,39}-django2.2-{sqlite3,postgresql,mysql}-{redis,memcached,pylibmc,locmem,filebased},
     py{37,38,39,310}-django3.2-{sqlite3,postgresql,mysql}-{redis,memcached,pylibmc,locmem,filebased},
     py{38,39,310}-django4.0-{sqlite3,postgresql,mysql}-{redis,memcached,pylibmc,locmem,filebased},
+    py{38,39,310}-django4.1-{sqlite3,postgresql,mysql}-{redis,memcached,pylibmc,locmem,filebased},
     py{38,39,310}-djangomain-{sqlite3,postgresql,mysql}-{redis,memcached,pylibmc,locmem,filebased},
 
 [testenv]
@@ -15,6 +16,7 @@ deps =
     django2.2: Django>=2.2,<2.3
     django3.2: Django>=3.2,<4.0
     django4.0: Django>=4.0,<4.1
+    django4.1: Django>=4.1,<4.2
     djangomain: https://github.com/django/django/archive/main.tar.gz
     psycopg2-binary>=2.8,<2.9
     mysqlclient
@@ -51,4 +53,5 @@ DJANGO =
     2.2: django2.2
     3.2: django3.2
     4.0: django4.0
+    4.1: django4.1
     main: djangomain
