--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,13 +13,14 @@ jobs:
       fail-fast: false
       matrix:
         python-version: ['3.7', '3.8', '3.9', '3.10']
-        django-version: ['2.2', '3.2', '4.0']
+        django-version: ['2.2', '3.2', '4.0', '4.1']
         exclude:
           - python-version: '3.10'
             django-version: '2.2'
           - python-version: '3.7'
             django-version: '4.0'
-
+          - python-version: '3.7'
+            django-version: '4.1'
     services:
       redis:
         image: redis:6
