--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,13 +12,13 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ['3.7', '3.8', '3.9', '3.10']
-        django-version: ['2.2', '3.2', '4.0']
+        python-version: ['3.7', '3.8', '3.9', '3.10', '3.11']
+        django-version: ['3.2', '4.1', '4.2']
         exclude:
-          - python-version: '3.10'
-            django-version: '2.2'
           - python-version: '3.7'
-            django-version: '4.0'
+            django-version: '4.1'
+          - python-version: '3.7'
+            django-version: '4.2'
 
     services:
       redis:
@@ -70,7 +70,7 @@ jobs:
           ${{ matrix.python-version }}-v1-
     - name: Install dependencies
       run: |
-        sudo apt-get install -y libmemcached-dev zlib1g-dev
+        sudo apt-get install -y libmemcached-dev zlib1g-dev libpq-dev
         python -m pip install --upgrade pip wheel
         python -m pip install tox tox-gh-actions coveralls
     - name: Tox Test
