--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,10 @@ on:
   pull_request:
     branches: [ master ]
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -15,6 +19,10 @@ jobs:
         python-version: ['3.7', '3.8', '3.9', '3.10', '3.11']
         django-version: ['3.2', '4.1', '4.2']
         exclude:
+          - python-version: '3.11'
+            django-version: '3.2'
+          - python-version: '3.11'
+            django-version: '4.1'
           - python-version: '3.7'
             django-version: '4.1'
           - python-version: '3.7'
