--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
       fail-fast: false
       matrix:
         python-version: ['3.7', '3.8', '3.9', '3.10', '3.11']
-        django-version: ['3.2', '4.1', '4.2']
+        django-version: ['3.2', '4.1', '4.2','5.0']
         exclude:
           - python-version: '3.11'
             django-version: '3.2'
@@ -27,6 +27,8 @@ jobs:
             django-version: '4.1'
           - python-version: '3.7'
             django-version: '4.2'
+          - python-version: '3.7'
+            django-version: '5.0'
     services:
       redis:
         image: redis:6
