--- a/tox.ini
+++ b/tox.ini
@@ -17,6 +17,7 @@ deps =
     django3.2: Django>=3.2,<4.0
     django4.1: Django>=4.1,<4.2
     django4.2: Django>=4.2,<4.3
+    django5.0: Django>=5.0,<5.1
     djangomain: https://github.com/django/django/archive/main.tar.gz
     psycopg2>=2.9.5,<3.0
     psycopg
