Add support for testing against the builtin redis backend

--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,10 @@
 [tox]
 envlist =
     py{37,38,39,310}-django3.2-{sqlite3,postgresql,mysql}-{redis,memcached,pylibmc,locmem,filebased},
-    py{38,39,310}-django4.1-{sqlite3,postgresql,mysql}-{redis,memcached,pylibmc,locmem,filebased},
-    py{38,39,310,312}-django4.2-{sqlite3,postgresql,mysql}-{redis,memcached,pylibmc,locmem,filebased},
-    py{310,311,312}-django5.0-{sqlite3,postgresql,mysql}-{redis,memcached,pylibmc,locmem,filebased},
-    py{310,311,312}-djangomain-{sqlite3,postgresql,mysql}-{redis,memcached,pylibmc,locmem,filebased},
+    py{38,39,310}-django4.1-{sqlite3,postgresql,mysql}-{builtin_redis,redis,memcached,pylibmc,locmem,filebased},
+    py{38,39,310,312}-django4.2-{sqlite3,postgresql,mysql}-{builtin_redis,redis,memcached,pylibmc,locmem,filebased},
+    py{310,311,312}-django5.0-{sqlite3,postgresql,mysql}-{builtin_redis,redis,memcached,pylibmc,locmem,filebased},
+    py{310,311,312}-djangomain-{sqlite3,postgresql,mysql}-{builtin_redis,redis,memcached,pylibmc,locmem,filebased},
 
 [testenv]
 passenv = *
@@ -35,14 +35,15 @@ deps =
     beautifulsoup4
     coverage
 setenv =
-    sqlite3:    DB_ENGINE=sqlite3
-    postgresql: DB_ENGINE=postgresql
-    mysql:      DB_ENGINE=mysql
-    locmem:     CACHE_BACKEND=locmem
-    filebased:  CACHE_BACKEND=filebased
-    redis:      CACHE_BACKEND=redis
-    memcached:  CACHE_BACKEND=memcached
-    pylibmc:    CACHE_BACKEND=pylibmc
+    sqlite3:       DB_ENGINE=sqlite3
+    postgresql:    DB_ENGINE=postgresql
+    mysql:         DB_ENGINE=mysql
+    locmem:        CACHE_BACKEND=locmem
+    filebased:     CACHE_BACKEND=filebased
+    redis:         CACHE_BACKEND=redis
+    builtin_redis: CACHE_BACKEND=builtin_redis
+    memcached:     CACHE_BACKEND=memcached
+    pylibmc:       CACHE_BACKEND=pylibmc
 commands =
     coverage run -a --source=cachalot ./runtests.py
 
